- applied 60_utf8_support.patch which closes Bug#266052. Changes:
- now uses the eyeD3 library for tagging both id3v1 and id3v2

- freedb queries are now done with protocol lvl 6. so we get utf-8

- I changed the patch a bit to work around a bug in eyeD3 - id3v1 genre defaulted to blues

--- a/README
+++ b/README
@@ -15,8 +15,7 @@ Requirements:
 
     * python-2.2 or later
     * CDDB.py  - see doc/INSTALL on how to get/install it
-    * ID3.py   - see doc/INSTALL on how to get/install it
-    * pyid3lib-0.5.1 or later if you want ID3v2 support
+    * eyeD3    - see doc/INSTALL on how to get/install it
     * an encoder like lame (MP3) or oggenc for Ogg/Vorbis (default)
     * a DAE tool like cdparanioa
 
