- applied 76_submit_updated_freedb.patch -- if freedb data is edited with --edit-freedb, a list of changes is displayed and the user is asked to submit the data back to freedb. another patch by Martin Michlmayr.
- --submit (freedb submit via http) is now set to test-mode if --debug is on

- renamed --edit-cddb to --edit-freedb. this breaks the UI but things have to be consistent.

--- a/jack.man
+++ b/jack.man
@@ -146,7 +146,7 @@ if directories are renamed, this is the format used (default "%a/%l")
 don't do DAE, encoding, tagging or renaming. This may be useful if you only
 want to do a FreeDB query, e.g. while another jack is running.
 .TP
-.B \-\-edit-cddb
+.B \-\-edit-freedb
 open an editor to change the CDDB information which has been obtained
 previously (only useful with -Q).
 .TP
