--- a/jack.man
+++ b/jack.man
@@ -500,6 +500,18 @@ Editing / normalizing / stripping the WAV files before encoding:
 jack -O --remove-files ; gnoise *wav ; jack -g *wav ; jack
 .RE
 Just replace gnoise by the operation you'd like to perform.
+.SH ENVIRONMENT VARIABLES
+There are several environment variables which can be used in jack's exec
+hooks:
+.IP JACK_BASE_DIR
+lists jack's base directory in which files are stored.
+.IP JACK_CUR_DIR
+lists the current directory of jack in which files of the current album are
+put.
+.IP JACK_JUST_ENCODED
+lists all track names which have just been encoded.
+.IP JACK_JUST_RIPPED
+lists all track names which have just been ripped.
 .SH FORMAT STRINGS
 .IP %n
 Track number
