--- a/jack.man
+++ b/jack.man
@@ -494,7 +494,7 @@ jack \-Q \-\-remove-files
 .PP
 Editing / normalizing / stripping the WAV files before encoding:
 .RS
-jack \-O \-\-remove-files ; gnoise *wav ; jack \-g *wav ; jack
+jack \-O \-D \-\-remove-files ; gnoise *wav ; jack \-g *wav ; jack
 .RE
 Just replace gnoise by the operation you'd like to perform.
 .SH ENVIRONMENT VARIABLES
